; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_read.c_test_refs_read__master_then_head.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_read.c_test_refs_read__master_then_head.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@current_head_target = common dso_local global i32 0, align 4
@GIT_HEAD_FILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_read__master_then_head() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @g_repo, align 4
  %5 = load i32, i32* @current_head_target, align 4
  %6 = call i32 @git_reference_lookup(i32** %2, i32 %4, i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32, i32* @g_repo, align 4
  %9 = load i32, i32* @GIT_HEAD_FILE, align 4
  %10 = call i32 @git_reference_lookup(i32** %1, i32 %8, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_reference_resolve(i32** %3, i32* %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @git_reference_target(i32* %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @git_reference_target(i32* %17)
  %19 = call i32 @cl_assert_equal_oid(i32 %16, i32 %18)
  %20 = load i32*, i32** %1, align 8
  %21 = call i32 @git_reference_free(i32* %20)
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @git_reference_free(i32* %22)
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @git_reference_free(i32* %24)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i32) #1

declare dso_local i32 @git_reference_resolve(i32**, i32*) #1

declare dso_local i32 @cl_assert_equal_oid(i32, i32) #1

declare dso_local i32 @git_reference_target(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
